Query selector method restricted to feature root node Pass NodeList to eventListener methods

--- a/demo/index.html
+++ b/demo/index.html
@@ -5,6 +5,82 @@
   </head>
   <body>
     <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
+    <div data-feature="test"></div>
     <script src="demo.bundle.js"></script>
   </body>
 </html>
