Added camelCase helper Added closest polyfill Fixed data utility Added data-feature-ignore attribute to be able to ignore certain features on init

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
     <title>Demo</title>
   </head>
   <body>
-    <div data-feature="test"></div>
+    <div data-feature="test" data-feature-ignore="test">Hello</div>
     <div data-feature="test"></div>
     <div data-feature="test"></div>
     <div data-feature="test"></div>
