Set rootElement for scroller

--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,35 @@
     <title>Demo</title>
   </head>
   <body>
+    <div style="height: 200px; width: 200px; overflow: auto;" id="test">
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test<br>
+      Test
+    </div>
     <div data-feature="test" data-feature-ignore="test">Hello</div>
     <div data-feature="test"></div>
     <div data-feature="test"></div>
