--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Demo</title>
   </head>
-  <body>
+  <body data-feature="body">
     <div style="height: 200px; width: 200px; overflow: auto;" id="test">
       Test<br>
       Test<br>
